update swagger url
