# src/Server.ts
@@ -39,13 +39,13 @@ if (process.env.NODE_ENV === 'production') {
 }
 
 //CORS
-app.use((req, res, next) => {
-     res.header('Access-Control-Allow-Origin', 'http://localhost:3000');
-     res.header('Access-Control-Allow-Headers', 'Authorization, X-API-KEY, Origin, X-Requested-With, Content-Type, Accept, Access-Control-Allow-Request-Method');
-     res.header('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, DELETE');
-     res.header('Allow', 'GET, POST, OPTIONS, PUT, DELETE');
-     next();
- });
+// app.use((req, res, next) => {
+//     res.header('Access-Control-Allow-Origin', 'http://localhost:3000');
+//     res.header('Access-Control-Allow-Headers', 'Authorization, X-API-KEY, Origin, X-Requested-With, Content-Type, Accept, Access-Control-Allow-Request-Method');
+//     res.header('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, DELETE');
+//     res.header('Allow', 'GET, POST, OPTIONS, PUT, DELETE');
+//     next();
+// });
 
 // Add APIs
 app.use('/api', BaseRouter);
